css/style.css
html, body {
    padding: 0;
    margin: 0;
    font-family: 'Alegreya', serif;
}

section {
    overflow: hidden;
}

.logo-text {
    max-width: 150px;
    margin-right: auto;
}

.logo-text h2 {
    font-family: 'Open Sans', sans-serif;
    color: red;
    font-weight: 900;
    transform: scale(1, 1.3);
}

.logo-text p {
    font-size: smaller;
    margin-bottom: 0;
}

li {
    list-style-type: none;
}

#logo {
    max-width: 6rem;
}

.navbar {
    background-color: #fffcf2;
}

.nav-item {
    font-size: 1.25em;
    padding-right: 1em;
}

#navbarSupportedContent {
    text-align: center;
}

.info-page-title, .location-page-title {
    margin: auto;
    width: 50%;
    text-align: center;
    font-size: 2em;
    margin-top: 4vh;
    border-bottom: 1px double lightgrey;
}

.location-page-title {
    width: 30%;
}

/* Dish Type List */
#dish-type-container {
    margin: auto;
    padding-top: 1.1em;
    background-color: #fff;
}

#dish-type-list {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    padding-left: 0;
    margin-bottom: 0;
    padding-bottom: 1em;
}

.dish-type {
    list-style-type: none;
    padding: 0.4em;
    margin: 0.6rem;
    margin-bottom: 0.2em;
    font-size: 0.92em;
    font-weight: 1000;
    color: rgb(110, 110, 110);
    border: 1px;
    border-radius: 1em;
    background-color: #ffd19a;
    transition: all 0.3s ease;
}

.dish-type:hover{
    cursor: pointer;
    color: white;
    background: #e28743;
    box-shadow: -1px 6px 10px 0 rgba(120, 60, 20, .2);
}

/* Lists of different dishes */
.dishes-top-hr {
    width: 75%;
    margin: auto;
}

#dishes-container {
    text-align: center;
}

.family-details {
    padding-left: 0;
}

.familyDishHide {
    opacity: 0;
}

.family-dishes-list {
    justify-content: center;
}

.family-dishes-list .left, .family-dishes-list .right {
    width: 13em;
    background-color: #d1e0d783;
    border-radius: 2em;
    padding-top: 1em;
    margin: 0.5em 5.5em;;
}

.dish-type-title {
    border-bottom: 3px double;
    font-size: 2em;
    width: 20rem;;
    margin: auto;
    margin-bottom: 0.7rem;
    font-weight: 1000;
    text-transform: uppercase;
}

 .right .dish-details  {
    display: flex;
    text-align: left; 
    justify-content: left;
}

.left .dish-details {
    display: flex;
    text-align: left; 
    justify-content: right;
}

.dish-name{
    font-size: 1.2em;
    margin-left: 2em;
}

.dish-name {
    width: 20em;
}

.dish-name-option {
    width: 23.8em;
    margin-left: 2.5em;
}

.dish-name-option {
    padding-left: 2.3vw;
    font-style: italic;
}

.dish-price {
    width: 2em;
    margin-right: 2em;
    text-align: right;
}

.dish-color2 {
    background-color: #fff;
}

/* Footer */
footer {
    background-color: #313030;
    color: white;
    text-align: center;
    display: flex;
    justify-content: center;
    padding: 4em;
}

footer .row {
    max-width: 60em;
}

.footer-title {
    font-size: 1.2em;
    padding-bottom: 1em;
}

footer li, footer p {
    color: rgba(230, 224, 224, 0.801);
}

#logo-footer {
    max-width: 6rem;
}

.footer-nav-link {
    text-decoration: none;
    color:rgba(230, 224, 224, 0.801);
}

.footer-nav-link:hover {
    color:rgba(255, 255, 255, 0.801); 
}

/*----Info-----*/
#info-container {
    align-items: center;
    margin: 0 20vw;
}

.info-row {
    display: flex;
    justify-content: space-around;
    margin: 4vh auto 10vh;
}

.info-text, .info-image {
    width: 50em;
    margin: auto;
    text-align: center;
}

.info-text {
    line-height: 2em;
    width: 70%;
    color:rgb(92, 92, 92);
}

.info-text:nth-of-type(1) {
    text-align: right;
    padding-right:2vw;
}

.info-text:nth-of-type(2) {
    text-align: left;
    padding-left:2vw;
}

.info-image img {
    width: 100%;
}

.price-change {
    color:rgb(155, 147, 147);
}

/* Media */
@media screen and (max-width: 767px) {
    #logo {
        width: 5rem;
    }

    .logo-text h2 {
        font-size: 1.3em
    }
    
    .logo-text p {
        font-size: 0.7em;
    }

    .dish-type-title {
        width: 15rem;;
    }

    .left .dish-details, .right .dish-details  {
        display: flex;
        text-align: left; 
        justify-content: center;
    }

    .dish-name, .dish-name-option {
        width: 70vw;
    }

    .dish-name-option {
        padding-left: 2em;
        font-size: 0.95em;
    }

    .family-dishes-list .left, .family-dishes-list .right {
        margin: 0.5em 2.5em;
    }
}

@media screen and (max-width: 575px) {
    #logo {
        width: 3rem;
    }

    .logo-text {
        max-width: 100px;
        margin-right: auto;
    }
    
    .logo-text h2 {
        font-size: 1em
    }
    
    .logo-text p {
        font-size: 0.5em;
    }
    .nav-item {
        font-size: 1em;
    }

    #dish-type-container {
        padding-top: 0;
    }

    .dish-type-title {
        width: 10rem;;
    }

    .dish-type {
        margin: 0 0.3em 1em 0.3em;
        padding: 0.3em;
        font-size: 0.8em;
    }

    .dish-price, .dish-name {
        font-size: 0.9em;
    }

    .dish-name {
        width: 70vw;
    }

    .dish-name-option {
        font-size: 0.75em;
    }

    .dish-type-title {
        font-size: 1.5em;
    }

    .family-dishes-list {
        font-size: 0.8em;
    }

    .family-dishes-list .left, .family-dishes-list .right {
        margin: 0.2em 0.3em;;
    }

    h4 {
        font-size: 1.3em;
    }

    h1 {
        font-size: 1.5em;
    } 
    
    /*-----MAP/Info----*/
    .info-page-title, .location-page-title {
        font-size: 1.3em;
        width: 60%;
        margin-top: 0.5em;
    }

    .info-row {
        display: block;
    }

    #info-container {
        margin: 0;
    }

    .info-image {
        width: 60vw;
    }

    .info-text:nth-last-of-type(1), .info-text:nth-last-of-type(2) {
        text-align: center;
    }

    .info-text {
        font-size: 0.9em;
    }
}

